otawa/frontc/frontc/cparser.output
   0  $accept : %entry% $end

   1  interpret : file EOF

   2  file :
   3       | globals

   4  globals : global
   5          | globals global

   6  global : global_type global_defs SEMICOLON
   7         | global_type global_proto body
   8         | global_type old_proto old_pardefs body
   9         | global_type SEMICOLON
  10         | TYPEDEF typedef_type typedef_defs_opt SEMICOLON
  11         | gcc_attribute TYPEDEF typedef_type typedef_defs SEMICOLON

  12  global_type : global_mod_list_opt global_qual
  13              | global_mod_list_opt comp_type global_mod_list_opt
  14              | global_mod_list_opt NAMED_TYPE global_mod_list_opt
  15              | global_mod_list_opt

  16  global_mod_list_opt :
  17                      | global_mod_list

  18  global_mod_list : global_mod
  19                  | global_mod_list global_mod

  20  global_mod : STATIC
  21             | CONST
  22             | VOLATILE
  23             | EXTERN
  24             | REGISTER
  25             | gcc_attribute

  26  global_qual : qual_type
  27              | global_qual qual_type
  28              | global_qual global_mod

  29  global_defs : global_def
  30              | global_defs COMMA global_def

  31  global_def : global_dec opt_gcc_fun_attributes
  32             | global_dec opt_gcc_fun_attributes EQ init_expression

  33  global_dec : IDENT
  34             | LPAREN global_dec RPAREN
  35             | STAR global_dec
  36             | STAR CONST global_dec
  37             | STAR VOLATILE global_dec
  38             | STAR RESTRICT global_dec
  39             | STAR gcc_attributes global_dec
  40             | global_dec LBRACKET comma_expression RBRACKET
  41             | global_dec LBRACKET RBRACKET
  42             | global_dec LPAREN parameters RPAREN
  43             | LPAREN global_dec RPAREN LPAREN parameters RPAREN
  44             | global_dec LPAREN old_parameters RPAREN
  45             | LPAREN global_dec RPAREN LPAREN old_parameters RPAREN

  46  global_proto : global_dec opt_gcc_attributes

  47  old_proto : global_dec opt_gcc_attributes

  48  old_parameters : old_pardecs
  49                 | old_pardecs ELLIPSIS

  50  old_pardecs : IDENT
  51              | old_pardecs COMMA IDENT
  52              | old_pardecs COMMA NAMED_TYPE

  53  old_pardefs : old_pardef
  54              | old_pardefs old_pardef

  55  old_pardef : old_type old_defs SEMICOLON

  56  old_type : old_mods_opt NAMED_TYPE old_mods_opt
  57           | old_mods_opt comp_type old_mods_opt
  58           | old_mods_opt old_qual

  59  old_mods_opt :
  60               | CONST
  61               | REGISTER

  62  old_qual : qual_type
  63           | old_qual qual_type
  64           | old_qual CONST
  65           | old_qual REGISTER

  66  old_defs : old_def
  67           | old_defs COMMA old_def

  68  old_def : old_dec

  69  old_dec : IDENT
  70          | STAR old_dec
  71          | STAR CONST old_dec
  72          | STAR VOLATILE old_dec
  73          | old_dec LBRACKET comma_expression RBRACKET
  74          | old_dec LBRACKET RBRACKET
  75          | old_dec LPAREN parameters RPAREN
  76          | LPAREN old_dec RPAREN LPAREN parameters RPAREN
  77          | LPAREN old_dec RPAREN

  78  local : local_type local_defs SEMICOLON

  79  local_type : local_mod_list_opt local_qual
  80             | local_mod_list_opt comp_type local_mod_list_opt
  81             | local_mod_list_opt NAMED_TYPE local_mod_list_opt

  82  local_mod_list_opt :
  83                     | local_mod_list

  84  local_mod_list : local_mod
  85                 | local_mod_list local_mod

  86  local_mod : STATIC
  87            | AUTO
  88            | CONST
  89            | VOLATILE
  90            | REGISTER
  91            | EXTERN
  92            | gcc_attribute

  93  local_qual : qual_type
  94             | local_qual qual_type
  95             | local_qual local_mod

  96  local_defs : local_def
  97             | local_defs COMMA local_def

  98  local_def : local_dec opt_gcc_fun_attributes
  99            | local_dec opt_gcc_fun_attributes EQ init_expression

 100  local_dec : IDENT
 101            | NAMED_TYPE
 102            | STAR local_dec
 103            | STAR RESTRICT local_dec
 104            | STAR CONST local_dec
 105            | STAR VOLATILE local_dec
 106            | STAR gcc_attributes local_dec
 107            | local_dec LBRACKET comma_expression RBRACKET
 108            | local_dec LBRACKET RBRACKET
 109            | local_dec LPAREN parameters RPAREN
 110            | LPAREN local_dec RPAREN LPAREN parameters RPAREN
 111            | LPAREN local_dec RPAREN

 112  typedef_type : typedef_sub
 113               | CONST typedef_sub
 114               | VOLATILE typedef_sub

 115  typedef_sub : NAMED_TYPE
 116              | comp_type
 117              | typedef_qual
 118              | IDENT
 119              | NAMED_TYPE CONST
 120              | NAMED_TYPE VOLATILE
 121              | comp_type CONST
 122              | comp_type VOLATILE
 123              | IDENT CONST
 124              | IDENT VOLATILE

 125  typedef_qual : qual_type
 126               | typedef_qual qual_type
 127               | typedef_qual CONST
 128               | typedef_qual VOLATILE

 129  typedef_defs_opt :
 130                   | typedef_defs

 131  typedef_defs : typedef_def
 132               | typedef_defs COMMA typedef_def

 133  typedef_def : typedef_dec opt_gcc_attributes

 134  typedef_dec : IDENT
 135              | STAR typedef_dec
 136              | STAR RESTRICT typedef_dec
 137              | STAR CONST typedef_dec
 138              | STAR VOLATILE typedef_dec
 139              | STAR gcc_attributes typedef_dec
 140              | typedef_dec LBRACKET comma_expression RBRACKET
 141              | typedef_dec LBRACKET RBRACKET
 142              | typedef_dec LPAREN parameters RPAREN
 143              | LPAREN typedef_dec RPAREN LPAREN parameters RPAREN
 144              | LPAREN typedef_dec RPAREN

 145  field_list : field_list field
 146             | field

 147  field : field_type field_defs SEMICOLON

 148  field_type : field_mod_list_opt field_qual
 149             | field_mod_list_opt comp_type field_mod_list_opt
 150             | field_mod_list_opt NAMED_TYPE field_mod_list_opt

 151  field_mod_list_opt :
 152                     | field_mod_list

 153  field_mod_list : field_mod
 154                 | field_mod_list field_mod

 155  field_mod : CONST
 156            | VOLATILE
 157            | gcc_attribute

 158  field_qual : qual_type
 159             | field_qual qual_type
 160             | field_qual field_mod

 161  field_defs : field_defs COMMA field_def
 162             | field_def

 163  field_def : field_dec

 164  field_dec :
 165            | IDENT
 166            | NAMED_TYPE
 167            | STAR field_dec
 168            | STAR RESTRICT field_dec
 169            | STAR CONST field_dec
 170            | STAR VOLATILE field_dec
 171            | STAR gcc_attributes field_dec
 172            | field_dec LBRACKET comma_expression RBRACKET
 173            | field_dec LBRACKET RBRACKET
 174            | field_dec LPAREN parameters RPAREN
 175            | LPAREN field_dec RPAREN LPAREN parameters RPAREN
 176            | LPAREN field_dec RPAREN
 177            | IDENT COLON expression
 178            | COLON expression

 179  parameters :
 180             | param_list
 181             | param_list COMMA ELLIPSIS

 182  param_list : param_list COMMA param
 183             | param

 184  param : param_type param_def

 185  param_type : param_mods_opt NAMED_TYPE param_mods_opt
 186             | param_mods_opt comp_type param_mods_opt
 187             | param_mods_opt param_qual

 188  param_mods_opt :
 189                 | param_mods

 190  param_mods : param_mod
 191             | param_mods param_mod

 192  param_mod : CONST
 193            | REGISTER
 194            | VOLATILE
 195            | gcc_attribute

 196  param_qual : qual_type
 197             | param_qual qual_type
 198             | param_qual CONST
 199             | param_qual REGISTER
 200             | param_qual VOLATILE
 201             | param_qual gcc_attribute

 202  param_def : param_dec

 203  param_dec :
 204            | IDENT
 205            | NAMED_TYPE
 206            | STAR param_dec
 207            | STAR RESTRICT param_dec
 208            | STAR CONST param_dec
 209            | STAR VOLATILE param_dec
 210            | STAR gcc_attributes param_dec
 211            | param_dec LBRACKET comma_expression RBRACKET
 212            | param_dec LBRACKET RBRACKET
 213            | LPAREN param_dec RPAREN LPAREN parameters RPAREN
 214            | LPAREN param_dec RPAREN

 215  only_type : only_type_type only_def

 216  only_type_type : only_mod_list_opt only_qual
 217                 | only_mod_list_opt comp_type only_mod_list_opt
 218                 | only_mod_list_opt NAMED_TYPE only_mod_list_opt

 219  only_mod_list_opt :
 220                    | only_mod_list

 221  only_qual : qual_type
 222            | only_qual qual_type
 223            | only_qual only_mod

 224  only_mod_list : only_mod
 225                | only_mod_list only_mod

 226  only_mod : CONST
 227           | VOLATILE
 228           | gcc_attribute

 229  only_def : only_dec

 230  only_dec :
 231           | STAR only_dec
 232           | STAR RESTRICT only_dec
 233           | STAR CONST only_dec
 234           | STAR VOLATILE only_dec
 235           | STAR gcc_attributes only_dec
 236           | only_dec LBRACKET comma_expression RBRACKET
 237           | only_dec LBRACKET RBRACKET
 238           | LPAREN only_dec RPAREN LPAREN parameters RPAREN
 239           | LPAREN only_dec RPAREN

 240  qual_type : VOID
 241            | CHAR
 242            | INT
 243            | FLOAT
 244            | DOUBLE
 245            | LONG
 246            | SHORT
 247            | SIGNED
 248            | UNSIGNED

 249  comp_type : STRUCT type_name
 250            | STRUCT LBRACE field_list RBRACE
 251            | STRUCT type_name LBRACE field_list RBRACE
 252            | UNION type_name
 253            | UNION LBRACE field_list RBRACE
 254            | UNION type_name LBRACE field_list RBRACE
 255            | ENUM type_name
 256            | ENUM LBRACE enum_list_comma RBRACE
 257            | ENUM type_name LBRACE enum_list_comma RBRACE

 258  type_name : IDENT
 259            | NAMED_TYPE

 260  enum_list_comma : enum_list
 261                  | enum_list COMMA

 262  enum_list : enum_name
 263            | enum_list COMMA enum_name

 264  enum_name : IDENT
 265            | IDENT EQ expression

 266  init_expression : LBRACE init_comma_expression RBRACE
 267                  | expression

 268  init_comma_expression : init_expression
 269                        | init_comma_expression COMMA init_expression
 270                        | init_comma_expression COMMA

 271  opt_expression :
 272                 | comma_expression

 273  comma_expression : expression
 274                   | comma_expression COMMA expression

 275  expression : constant
 276             | IDENT
 277             | SIZEOF expression
 278             | SIZEOF LPAREN only_type RPAREN
 279             | PLUS expression
 280             | MINUS expression
 281             | STAR expression
 282             | AND expression
 283             | EXCLAM expression
 284             | TILDE expression
 285             | PLUS_PLUS expression
 286             | expression PLUS_PLUS
 287             | MINUS_MINUS expression
 288             | expression MINUS_MINUS
 289             | expression ARROW IDENT
 290             | expression ARROW NAMED_TYPE
 291             | expression DOT IDENT
 292             | expression DOT NAMED_TYPE
 293             | LPAREN body RPAREN
 294             | LPAREN comma_expression RPAREN
 295             | LPAREN only_type RPAREN expression
 296             | expression LPAREN opt_expression RPAREN
 297             | expression LBRACKET comma_expression RBRACKET
 298             | expression QUEST expression COLON expression
 299             | expression PLUS expression
 300             | expression MINUS expression
 301             | expression STAR expression
 302             | expression SLASH expression
 303             | expression PERCENT expression
 304             | expression AND_AND expression
 305             | expression PIPE_PIPE expression
 306             | expression AND expression
 307             | expression PIPE expression
 308             | expression CIRC expression
 309             | expression EQ_EQ expression
 310             | expression EXCLAM_EQ expression
 311             | expression INF expression
 312             | expression SUP expression
 313             | expression INF_EQ expression
 314             | expression SUP_EQ expression
 315             | expression INF_INF expression
 316             | expression SUP_SUP expression
 317             | expression EQ expression
 318             | expression PLUS_EQ expression
 319             | expression MINUS_EQ expression
 320             | expression STAR_EQ expression
 321             | expression SLASH_EQ expression
 322             | expression PERCENT_EQ expression
 323             | expression AND_EQ expression
 324             | expression PIPE_EQ expression
 325             | expression CIRC_EQ expression
 326             | expression INF_INF_EQ expression
 327             | expression SUP_SUP_EQ expression

 328  constant : CST_INT
 329           | CST_FLOAT
 330           | CST_CHAR
 331           | string_list

 332  string_list : CST_STRING
 333              | string_list CST_STRING

 334  body_begin : LBRACE

 335  body_middle : opt_locals opt_stats

 336  body : body_begin body_middle RBRACE

 337  opt_locals :
 338             | locals

 339  locals : local
 340         | locals local

 341  opt_stats :
 342            | stats

 343  stats : stat_with_local
 344        | stat_with_local stats

 345  stat_with_local : statement
 346                  | statement locals

 347  statement : SEMICOLON
 348            | comma_expression SEMICOLON
 349            | body
 350            | IF LPAREN comma_expression RPAREN statement
 351            | IF LPAREN comma_expression RPAREN statement ELSE statement
 352            | SWITCH LPAREN comma_expression RPAREN statement
 353            | WHILE LPAREN comma_expression RPAREN statement
 354            | DO statement WHILE LPAREN comma_expression RPAREN SEMICOLON
 355            | FOR LPAREN opt_expression SEMICOLON opt_expression SEMICOLON opt_expression RPAREN statement
 356            | IDENT COLON statement
 357            | CASE expression COLON statement
 358            | DEFAULT COLON statement
 359            | RETURN SEMICOLON
 360            | RETURN expression SEMICOLON
 361            | BREAK SEMICOLON
 362            | CONTINUE SEMICOLON
 363            | GOTO IDENT SEMICOLON
 364            | ASM LPAREN string_list RPAREN SEMICOLON
 365            | ASM LPAREN string_list gnu_asm_io opt_gnu_asm_io RPAREN SEMICOLON
 366            | ASM VOLATILE LPAREN string_list gnu_asm_io opt_gnu_asm_io RPAREN SEMICOLON

 367  opt_gnu_asm_io :
 368                 | gnu_asm_io opt_gnu_asm_mods

 369  gnu_asm_io : COLON gnu_asm_args
 370             | COLON

 371  gnu_asm_args : gnu_asm_arg
 372               | gnu_asm_args COMMA gnu_asm_arg

 373  gnu_asm_arg : CST_STRING gnu_asm_exp_opt
 374              | LBRACKET IDENT RBRACKET CST_STRING gnu_asm_exp_opt

 375  gnu_asm_exp_opt :
 376                  | LPAREN expression RPAREN

 377  opt_gnu_asm_mods :
 378                   | COLON gnu_asm_mods

 379  gnu_asm_mods : CST_STRING
 380               | gnu_asm_mods COMMA CST_STRING

 381  opt_gcc_attributes :
 382                     | gcc_attributes

 383  gcc_attributes : gcc_attribute
 384                 | gcc_attributes gcc_attribute

 385  gcc_attribute : ATTRIBUTE LPAREN LPAREN opt_gnu_args RPAREN RPAREN
 386                | EXTENSION
 387                | INLINE

 388  opt_gnu_args :
 389               | gnu_args

 390  gnu_args : gnu_arg
 391           | gnu_args COMMA gnu_arg

 392  gnu_arg : gnu_id
 393          | constant
 394          | gnu_id LPAREN opt_gnu_args RPAREN

 395  gnu_id : IDENT
 396         | GNU_ATTRS
 397         | CONST
 398         | INLINE
 399         | ASM

 400  opt_gcc_fun_attributes : opt_gcc_attributes
 401                         | opt_gcc_attributes asm_attribute opt_gcc_attributes

 402  asm_attribute : ASM LPAREN string_list RPAREN

 403  %entry% : '\001' interpret
 404          | '\002' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . interpret  (403)
	file : .  (2)
	global_mod_list_opt : .  (16)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	REGISTER  shift 9
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	INLINE  shift 12
	IDENT  reduce 16
	NAMED_TYPE  reduce 16
	EOF  reduce 2
	CHAR  reduce 16
	INT  reduce 16
	DOUBLE  reduce 16
	FLOAT  reduce 16
	VOID  reduce 16
	ENUM  reduce 16
	STRUCT  reduce 16
	UNION  reduce 16
	SIGNED  reduce 16
	UNSIGNED  reduce 16
	LONG  reduce 16
	SHORT  reduce 16
	STAR  reduce 16
	LPAREN  reduce 16
	SEMICOLON  reduce 16

	interpret  goto 13
	file  goto 14
	globals  goto 15
	global  goto 16
	global_type  goto 17
	global_mod_list_opt  goto 18
	global_mod_list  goto 19
	global_mod  goto 20
	gcc_attribute  goto 21


state 2
	%entry% : '\002' . file  (404)
	file : .  (2)
	global_mod_list_opt : .  (16)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	REGISTER  shift 9
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	INLINE  shift 12
	$end  reduce 2
	IDENT  reduce 16
	NAMED_TYPE  reduce 16
	CHAR  reduce 16
	INT  reduce 16
	DOUBLE  reduce 16
	FLOAT  reduce 16
	VOID  reduce 16
	ENUM  reduce 16
	STRUCT  reduce 16
	UNION  reduce 16
	SIGNED  reduce 16
	UNSIGNED  reduce 16
	LONG  reduce 16
	SHORT  reduce 16
	STAR  reduce 16
	LPAREN  reduce 16
	SEMICOLON  reduce 16

	file  goto 22
	globals  goto 15
	global  goto 16
	global_type  goto 17
	global_mod_list_opt  goto 18
	global_mod_list  goto 19
	global_mod  goto 20
	gcc_attribute  goto 21


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	global : TYPEDEF . typedef_type typedef_defs_opt SEMICOLON  (10)

	IDENT  shift 23
	NAMED_TYPE  shift 24
	CHAR  shift 25
	INT  shift 26
	DOUBLE  shift 27
	FLOAT  shift 28
	VOID  shift 29
	ENUM  shift 30
	STRUCT  shift 31
	UNION  shift 32
	SIGNED  shift 33
	UNSIGNED  shift 34
	LONG  shift 35
	SHORT  shift 36
	VOLATILE  shift 37
	CONST  shift 38
	.  error

	typedef_type  goto 39
	comp_type  goto 40
	qual_type  goto 41
	typedef_sub  goto 42
	typedef_qual  goto 43


state 5
	global_mod : VOLATILE .  (22)

	.  reduce 22


state 6
	global_mod : EXTERN .  (23)

	.  reduce 23


state 7
	global_mod : STATIC .  (20)

	.  reduce 20


state 8
	global_mod : CONST .  (21)

	.  reduce 21


state 9
	global_mod : REGISTER .  (24)

	.  reduce 24


state 10
	gcc_attribute : ATTRIBUTE . LPAREN LPAREN opt_gnu_args RPAREN RPAREN  (385)

	LPAREN  shift 44
	.  error


state 11
	gcc_attribute : EXTENSION .  (386)

	.  reduce 386


state 12
	gcc_attribute : INLINE .  (387)

	.  reduce 387


state 13
	%entry% : '\001' interpret .  (403)

	.  reduce 403


state 14
	interpret : file . EOF  (1)

	EOF  shift 45
	.  error


state 15
	file : globals .  (3)
	globals : globals . global  (5)
	global_mod_list_opt : .  (16)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	REGISTER  shift 9
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	INLINE  shift 12
	$end  reduce 3
	IDENT  reduce 16
	NAMED_TYPE  reduce 16
	EOF  reduce 3
	CHAR  reduce 16
	INT  reduce 16
	DOUBLE  reduce 16
	FLOAT  reduce 16
	VOID  reduce 16
	ENUM  reduce 16
	STRUCT  reduce 16
	UNION  reduce 16
	SIGNED  reduce 16
	UNSIGNED  reduce 16
	LONG  reduce 16
	SHORT  reduce 16
	STAR  reduce 16
	LPAREN  reduce 16
	SEMICOLON  reduce 16

	global  goto 46
	global_type  goto 17
	global_mod_list_opt  goto 18
	global_mod_list  goto 19
	global_mod  goto 20
	gcc_attribute  goto 21


state 16
	globals : global .  (4)

	.  reduce 4


state 17
	global : global_type . global_defs SEMICOLON  (6)
	global : global_type . global_proto body  (7)
	global : global_type . old_proto old_pardefs body  (8)
	global : global_type . SEMICOLON  (9)

	IDENT  shift 47
	STAR  shift 48
	LPAREN  shift 49
	SEMICOLON  shift 50
	.  error

	global_defs  goto 51
	global_def  goto 52
	global_dec  goto 53
	global_proto  goto 54
	old_proto  goto 55


state 18
	global_type : global_mod_list_opt . global_qual  (12)
	global_type : global_mod_list_opt . comp_type global_mod_list_opt  (13)
	global_type : global_mod_list_opt . NAMED_TYPE global_mod_list_opt  (14)
	global_type : global_mod_list_opt .  (15)

	NAMED_TYPE  shift 56
	CHAR  shift 25
	INT  shift 26
	DOUBLE  shift 27
	FLOAT  shift 28
	VOID  shift 29
	ENUM  shift 30
	STRUCT  shift 31
	UNION  shift 32
	SIGNED  shift 33
	UNSIGNED  shift 34
	LONG  shift 35
	SHORT  shift 36
	IDENT  reduce 15
	STAR  reduce 15
	LPAREN  reduce 15
	SEMICOLON  reduce 15

	global_qual  goto 57
	comp_type  goto 58
	qual_type  goto 59


state 19
	global_mod_list_opt : global_mod_list .  (17)
	global_mod_list : global_mod_list . global_mod  (19)

	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	REGISTER  shift 9
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	INLINE  shift 12
	IDENT  reduce 17
	NAMED_TYPE  reduce 17
	CHAR  reduce 17
	INT  reduce 17
	DOUBLE  reduce 17
	FLOAT  reduce 17
	VOID  reduce 17
	ENUM  reduce 17
	STRUCT  reduce 17
	UNION  reduce 17
	SIGNED  reduce 17
	UNSIGNED  reduce 17
	LONG  reduce 17
	SHORT  reduce 17
	STAR  reduce 17
	LPAREN  reduce 17
	SEMICOLON  reduce 17

	global_mod  goto 60
	gcc_attribute  goto 61


state 20
	global_mod_list : global_mod .  (18)

	.  reduce 18


state 21
	global : gcc_attribute . TYPEDEF typedef_type typedef_defs SEMICOLON  (11)
	global_mod : gcc_attribute .  (25)

	TYPEDEF  shift 62
	IDENT  reduce 25
	NAMED_TYPE  reduce 25
	CHAR  reduce 25
	INT  reduce 25
	DOUBLE  reduce 25
	FLOAT  reduce 25
	VOID  reduce 25
	ENUM  reduce 25
	STRUCT  reduce 25
	UNION  reduce 25
	SIGNED  reduce 25
	UNSIGNED  reduce 25
	LONG  reduce 25
	SHORT  reduce 25
	VOLATILE  reduce 25
	EXTERN  reduce 25
	STATIC  reduce 25
	CONST  reduce 25
	REGISTER  reduce 25
	STAR  reduce 25
	LPAREN  reduce 25
	SEMICOLON  reduce 25
	ATTRIBUTE  reduce 25
	EXTENSION  reduce 25
	INLINE  reduce 25


state 22
	%entry% : '\002' file .  (404)

	.  reduce 404


state 23
	typedef_sub : IDENT .  (118)
	typedef_sub : IDENT . CONST  (123)
	typedef_sub : IDENT . VOLATILE  (124)

	VOLATILE  shift 63
	CONST  shift 64
	IDENT  reduce 118
	STAR  reduce 118
	LPAREN  reduce 118
	SEMICOLON  reduce 118


state 24
	typedef_sub : NAMED_TYPE .  (115)
	typedef_sub : NAMED_TYPE . CONST  (119)
	typedef_sub : NAMED_TYPE . VOLATILE  (120)

	VOLATILE  shift 65
	CONST  shift 66
	IDENT  reduce 115
	STAR  reduce 115
	LPAREN  reduce 115
	SEMICOLON  reduce 115


state 25
	qual_type : CHAR .  (241)

	.  reduce 241


state 26
	qual_type : INT .  (242)

	.  reduce 242


state 27
	qual_type : DOUBLE .  (244)

	.  reduce 244


state 28
	qual_type : FLOAT .  (243)

	.  reduce 243


state 29
	qual_type : VOID .  (240)

	.  reduce 240


state 30
	comp_type : ENUM . type_name  (255)
	comp_type : ENUM . LBRACE enum_list_comma RBRACE  (256)
	comp_type : ENUM . type_name LBRACE enum_list_comma RBRACE  (257)

	IDENT  shift 67
	NAMED_TYPE  shift 68
	LBRACE  shift 69
	.  error

	type_name  goto 70


state 31
	comp_type : STRUCT . type_name  (249)
	comp_type : STRUCT . LBRACE field_list RBRACE  (250)
	comp_type : STRUCT . type_name LBRACE field_list RBRACE  (251)

	IDENT  shift 67
	NAMED_TYPE  shift 68
	LBRACE  shift 71
	.  error

	type_name  goto 72


state 32
	comp_type : UNION . type_name  (252)
	comp_type : UNION . LBRACE field_list RBRACE  (253)
	comp_type : UNION . type_name LBRACE field_list RBRACE  (254)

	IDENT  shift 67
	NAMED_TYPE  shift 68
	LBRACE  shift 73
	.  error

	type_name  goto 74


state 33
	qual_type : SIGNED .  (247)

	.  reduce 247


state 34
	qual_type : UNSIGNED .  (248)

	.  reduce 248


state 35
	qual_type : LONG .  (245)

	.  reduce 245


state 36
	qual_type : SHORT .  (246)

	.  reduce 246


state 37
	typedef_type : VOLATILE . typedef_sub  (114)

	IDENT  shift 23
	NAMED_TYPE  shift 24
	CHAR  shift 25
	INT  shift 26
	DOUBLE  shift 27
	FLOAT  shift 28
	VOID  shift 29
	ENUM  shift 30
	STRUCT  shift 31
	UNION  shift 32
	SIGNED  shift 33
	UNSIGNED  shift 34
	LONG  shift 35
	SHORT  shift 36
	.  error

	comp_type  goto 40
	qual_type  goto 41
	typedef_sub  goto 75
	typedef_qual  goto 43


state 38
	typedef_type : CONST . typedef_sub  (113)

	IDENT  shift 23
	NAMED_TYPE  shift 24
	CHAR  shift 25
	INT  shift 26
	DOUBLE  shift 27
	FLOAT  shift 28
	VOID  shift 29
	ENUM  shift 30
	STRUCT  shift 31
	UNION  shift 32
	SIGNED  shift 33
	UNSIGNED  shift 34
	LONG  shift 35
	SHORT  shift 36
	.  error

	comp_type  goto 40
	qual_type  goto 41
	typedef_sub  goto 76
	typedef_qual  goto 43


state 39
	global : TYPEDEF typedef_type . typedef_defs_opt SEMICOLON  (10)
	typedef_defs_opt : .  (129)

	IDENT  shift 77
	STAR  shift 78
	LPAREN  shift 79
	SEMICOLON  reduce 129

	typedef_defs_opt  goto 80
	typedef_defs  goto 81
	typedef_def  goto 82
	typedef_dec  goto 83


state 40
	typedef_sub : comp_type .  (116)
	typedef_sub : comp_type . CONST  (121)
	typedef_sub : comp_type . VOLATILE  (122)

	VOLATILE  shift 84
	CONST  shift 85
	IDENT  reduce 116
	STAR  reduce 116
	LPAREN  reduce 116
	SEMICOLON  reduce 116


state 41
	typedef_qual : qual_type .  (125)

	.  reduce 125


state 42
	typedef_type : typedef_sub .  (112)

	.  reduce 112


state 43
	typedef_sub : typedef_qual .  (117)
	typedef_qual : typedef_qual . qual_type  (126)
	typedef_qual : typedef_qual . CONST  (127)
	typedef_qual : typedef_qual . VOLATILE  (128)

	CHAR  shift 25
	INT  shift 26
	DOUBLE  shift 27
	FLOAT  shift 28
	VOID  shift 29
	SIGNED  shift 33
	UNSIGNED  shift 34
	LONG  shift 35
	SHORT  shift 36
	VOLATILE  shift 86
	CONST  shift 87
	IDENT  reduce 117
	STAR  reduce 117
	LPAREN  reduce 117
	SEMICOLON  reduce 117

	qual_type  goto 88


state 44
	gcc_attribute : ATTRIBUTE LPAREN . LPAREN opt_gnu_args RPAREN RPAREN  (385)

	LPAREN  shift 89
	.  error


state 45
	interpret : file EOF .  (1)

	.  reduce 1


state 46
	globals : globals global .  (5)

	.  reduce 5


state 47
	global_dec : IDENT .  (33)

	.  reduce 33


state 48
	global_dec : STAR . global_dec  (35)
	global_dec : STAR . CONST global_dec  (36)
	global_dec : STAR . VOLATILE global_dec  (37)
	global_dec : STAR . RESTRICT global_dec  (38)
	global_dec : STAR . gcc_attributes global_dec  (39)

	IDENT  shift 47
	VOLATILE  shift 90
	CONST  shift 91
	RESTRICT  shift 92
	STAR  shift 48
	LPAREN  shift 49
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	INLINE  shift 12
	.  error

	global_dec  goto 93
	gcc_attributes  goto 94
	gcc_attribute  goto 95


state 49
	global_dec : LPAREN . global_dec RPAREN  (34)
	global_dec : LPAREN . global_dec RPAREN LPAREN parameters RPAREN  (43)
	global_dec : LPAREN . global_dec RPAREN LPAREN old_parameters RPAREN  (45)

	IDENT  shift 47
	STAR  shift 48
	LPAREN  shift 49
	.  error

	global_dec  goto 96


state 50
	global : global_type SEMICOLON .  (9)

	.  reduce 9


state 51
	global : global_type global_defs . SEMICOLON  (6)
	global_defs : global_defs . COMMA global_def  (30)

	SEMICOLON  shift 97
	COMMA  shift 98
	.  error


state 52
	global_defs : global_def .  (29)

	.  reduce 29


state 53
	global_def : global_dec . opt_gcc_fun_attributes  (31)
	global_def : global_dec . opt_gcc_fun_attributes EQ init_expression  (32)
	global_dec : global_dec . LBRACKET comma_expression RBRACKET  (40)
	global_dec : global_dec . LBRACKET RBRACKET  (41)
	global_dec : global_dec . LPAREN parameters RPAREN  (42)
	global_dec : global_dec . LPAREN old_parameters RPAREN  (44)
	global_proto : global_dec . opt_gcc_attributes  (46)
	old_proto : global_dec . opt_gcc_attributes  (47)
	opt_gcc_attributes : .  (381)
